<?xml version="1.0"?>
<package format="2">
  <name>relay_control</name>
  <version>1.0.0</version>
  <description>This package is designed to control a single-channel USB relay module (based on the CH340 USB-to-Serial converter chip) within a ROS environment.</description>

  <maintainer email="contact@cjt-robotics.de">CJT-Robotics</maintainer>

  <license>TODO</license>

  <url type="website">https://cjt-robotics.de</url>
  <url type="repository">https://github.com/CJT-Robotics/magnetometer</url>

  <author email="markus.peltsarszky@gmail.com">Markus Peltsarszky</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
